--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,41 @@ Title: One-line description of this awesome package
 Version: 0.0.1.9001
 Date: 2024-04-24
 Authors@R:
-    person("Kristine", "Karstens", , "karstens@pik-potsdam.de", role = c("aut", "cre"))
+    c(person("Felicitas", "Beier", email = "beier@pik-potsdam.de", role = c("aut","cre")),
+             person("Kristine", "Karstens", role = "aut"),
+             person("Marcos", "Alves", role = "aut"),
+             person("Jan", "Philipp Dietrich", role = "aut"),
+             person("Benjamin", "Leon Bodirsky", role = "aut"),
+             person("David", "Hoetten", role = "aut"),
+             person("Florian", "Humpenoeder", role = "aut"),
+             person("Jens", "Heinke", role = "aut"),
+             person("Patrick", "v. Jeetze", role = "aut"),
+             person("Abhijeet", "Mishra", role = "aut"),
+             person("Felcitas", "Beier", role = "aut"),
+             person("Stephen", "Wirth", role = "aut"),
+             person("David", "Chen", role = "aut"),
+             person("Ulrich", "Kreidenweis", role = "aut"))
 Description: One-paragraph description of this awesome package.
 License: LGPL-3
 URL: https://github.com/pik-piam/mrlandcore
+Depends:
+    R (>= 2.10.0),
+    magclass (>= 3.17),
+    madrat (>= 2.20.9),
+    mrdrivers (>= 1.0.0),
+    mstools
+Imports:
+    lpjclass,
+    lpjmlkit,
+    luscale,
+    magpiesets (>= 0.44.2),
+    ncdf4,
+    nleqslv,
+    raster,
+    terra,
+    SPEI,
+    stringr,
+    withr
 Suggests:
     testthat
 Encoding: UTF-8
