--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(toolLPJmLVersion)
 import(madrat)
 import(magclass)
 import(mrdrivers)
+import(mrfaocore)
 import(mstools)
 importFrom(SPEI,thornthwaite)
+importFrom(dplyr,"%>%")
 importFrom(lpjclass,read.LPJ_input)
 importFrom(lpjclass,readLPJ)
 importFrom(lpjmlkit,read_io)
@@ -44,6 +46,9 @@ importFrom(magclass,setYears)
 importFrom(magclass,where)
 importFrom(magpiesets,addLocation)
 importFrom(magpiesets,findset)
+importFrom(mrfaocore,toolExtrapolateFodder)
+importFrom(mrfaocore,toolFAOcombine)
+importFrom(mstools,toolConv2CountryByCelltype)
 importFrom(mstools,toolHoldConstant)
 importFrom(ncdf4,nc_open)
 importFrom(nleqslv,nleqslv)
@@ -62,8 +67,10 @@ importFrom(terra,ext)
 importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,subset)
+importFrom(terra,terraOptions)
 importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,person)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,tail)
