--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: mrlandcore
 Title: One-line description of this awesome package
-Version: 0.0.1.9001
+Version: 0.1.0
 Date: 2024-04-24
 Authors@R:
     c(person("Felicitas", "Beier", email = "beier@pik-potsdam.de", role = c("aut","cre")),
@@ -26,8 +26,10 @@ Depends:
     magclass (>= 3.17),
     madrat (>= 2.20.9),
     mrdrivers (>= 1.0.0),
+    mrfaocore,
     mstools
 Imports:
+    dplyr,
     lpjclass,
     lpjmlkit,
     luscale,
