--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,33 +1,34 @@
 Type: Package
 Package: mrlandcore
 Title: One-line description of this awesome package
-Version: 0.1.0.9001
-Date: 2024-04-26
-Authors@R:
-    c(person("Felicitas", "Beier", email = "beier@pik-potsdam.de", role = c("aut","cre")),
-             person("Kristine", "Karstens", role = "aut"),
-             person("Marcos", "Alves", role = "aut"),
-             person("Jan", "Philipp Dietrich", role = "aut"),
-             person("Benjamin", "Leon Bodirsky", role = "aut"),
-             person("David", "Hoetten", role = "aut"),
-             person("Florian", "Humpenoeder", role = "aut"),
-             person("Jens", "Heinke", role = "aut"),
-             person("Patrick", "v. Jeetze", role = "aut"),
-             person("Abhijeet", "Mishra", role = "aut"),
-             person("Felcitas", "Beier", role = "aut"),
-             person("Stephen", "Wirth", role = "aut"),
-             person("David", "Chen", role = "aut"),
-             person("Ulrich", "Kreidenweis", role = "aut"))
+Version: 1.0.0
+Date: 2024-05-07
+Authors@R:c(
+    person("Felicitas", "Beier", , "beier@pik-potsdam.de", role = c("aut", "cre")),
+    person("Kristine", "Karstens", role = "aut"),
+    person("Marcos", "Alves", role = "aut"),
+    person("Jan", "Philipp Dietrich", role = "aut"),
+    person("Benjamin", "Leon Bodirsky", role = "aut"),
+    person("David", "Hoetten", role = "aut"),
+    person("Florian", "Humpenoeder", role = "aut"),
+    person("Jens", "Heinke", role = "aut"),
+    person("Patrick", "v. Jeetze", role = "aut"),
+    person("Abhijeet", "Mishra", role = "aut"),
+    person("Felcitas", "Beier", role = "aut"),
+    person("Stephen", "Wirth", role = "aut"),
+    person("David", "Chen", role = "aut"),
+    person("Ulrich", "Kreidenweis", role = "aut")
+  )
 Description: One-paragraph description of this awesome package.
 License: LGPL-3
 URL: https://github.com/pik-piam/mrlandcore
 Depends:
-    R (>= 2.10.0),
-    magclass (>= 3.17),
     madrat (>= 2.20.9),
+    magclass (>= 3.17),
     mrdrivers (>= 1.0.0),
-    mrfaocore,
-    mstools
+    mrfaocore (>= 1.0.0),
+    mstools (>= 0.6.0),
+    R (>= 2.10.0)
 Imports:
     dplyr,
     lpjclass,
@@ -37,9 +38,9 @@ Imports:
     ncdf4,
     nleqslv,
     raster,
-    terra,
     SPEI,
     stringr,
+    terra,
     withr
 Suggests:
     testthat
