--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ URL: https://github.com/pik-piam/mrlandcore
 Depends:
     madrat (>= 2.20.9),
     magclass (>= 3.17),
+    mrdownscale,
     mrdrivers (>= 1.0.0),
     mrfaocore (>= 1.0.0),
     mstools (>= 0.6.0),
