--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(toolForestRelocate)
 export(toolLPJmLVersion)
 import(madrat)
 import(magclass)
+import(mrdownscale)
 import(mrdrivers)
 import(mrfaocore)
 import(mstools)
