--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ URL: https://github.com/pik-piam/mrlandcore
 Depends:
     madrat (>= 2.20.9),
     magclass (>= 3.17),
-    mrdownscale,
+    mrdownscale (>= 0.41.7),
     mrdrivers (>= 1.0.0),
     mrfaocore (>= 1.0.0),
     mstools (>= 0.6.0),
