--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Type: Package
 Package: mrlandcore
-Title: Fundamental MAgPIE preprocessing functions including calcLanduseInitialisation
-Version: 1.6.2
-Date: 2025-10-14
+Title: Fundamental MAgPIE preprocessing functions including
+    calcLanduseInitialisation
+Version: 1.6.3
+Date: 2025-10-24
 Authors@R: c(
     person("Felicitas", "Beier", , "beier@pik-potsdam.de", role = c("aut", "cre")),
     person("Kristine", "Karstens", role = "aut"),
@@ -17,9 +18,11 @@ Authors@R: c(
     person("Felcitas", "Beier", role = "aut"),
     person("Stephen", "Wirth", role = "aut"),
     person("David", "Chen", role = "aut"),
-    person("Ulrich", "Kreidenweis", role = "aut")
+    person("Ulrich", "Kreidenweis", role = "aut"),
+    person("Pascal", "Sauer", role = "aut")
   )
-Description: Fundamental MAgPIE preprocessing functions including calcLanduseInitialisation
+Description: Fundamental MAgPIE preprocessing functions including
+    calcLanduseInitialisation.
 License: LGPL-3
 URL: https://github.com/pik-piam/mrlandcore
 Depends:
@@ -46,4 +49,4 @@ Imports:
 Suggests:
     testthat
 Encoding: UTF-8
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
